explicitly set text-align in case ancestor has non-standard setting, fixes #12144
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@25421 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1298,6 +1298,7 @@ body .dijitAlignClient { position: absolute; }
 	width: 50000px;
 	display: block;
 	position: relative;
+    text-align: left;  /* just in case ancestor has non-standard setting */
 }
 .dijitTabListWrapper {
 	overflow: hidden;
